* UTIL pan-os-php type=config-download-all | introduce type and move feature from development into php class
* UTIL UI update json_array.js to get actual info about script actions / filter
* UTIL get_action_filter | improve
* UTIL UI - extension for playbook JSON file reading and creation
* UTIL type=zone | introduce new 'filter=(zpp is.set) / (zpp is PROFILNAME)'

BUGFIX:
* UTIL pan-os-php type=device | bugfix actions=securityprofile-create-alert-only PAN-OS version <10 compare to >=10
* UTIL pan-os-php type=device | bugfix for actions=securityprofile-create-alert-only:true if no PAN-OS API method is used
* UTIL pan-os-php type=device | bugfix for all actions which are using IronSkillet snippets
* UTIL pan-os-php type=device | actions=zoneprotectionprofile-create-bp / logforwardingprofile-create-bp bugfix for PAN-OS API method
* UTIL pan-os-php type=device actions=securityprofile-create-alert-only | bugfix on offline config file to create profiles only once

GENERAL:


2.0.27 (20220111)
UTILS:
* pa_gratuitous-arp - extend for SNAT / improve if addressObject value has netmask, to send gARP to all IP Addresses
* all scripts - introduce new argument 'git=[BRANCHname]';
* ALIAS extension and correction
* pa_tag-edit | introduce new "actions=replace-with-object:TAGname" in combination with 'filter=(name eq OLDtagName)'
* UTIL develop - introduce interface_getIP
* UTIL all rule classes - improvements for PHP8.1
* UTIL | disable logging
* UTIL - PanAPIConnector | improve Exception handling
* UTIL pan-os-php type=device | introduce actions=logforwardingprofile-create-bp / zoneprotectionprofile-create-bp
* UTIL type=device | actions=securityprofile-create-alert-only extend with customerURLcategory
* UTIL pan-os-php type=device | introduce actions=template-create
* UTIL pan-os-php type=address-merger - improve merging value has /32 or only HOST IP address
* UTIL type=device | introduce actions=cleanuprule-create-bp